--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <button class="changeCellCount">Change Cell Count</button>
     <div class="container"></div>
 </body>
 
