--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <button class="changeCellCount">Change Cell Count</button>
+    <button class="clean">Clean</button>
     <div class="container"></div>
 </body>
 
